<resources>
    <string name="app_name">BendHelp</string>
    <string name="bend_radius">PROMIEŃ GIĘCIA</string>
    <string name="tube_diameter">ŚREDNICA RURY</string>
    <string name="tube_thickness">GRUBOŚĆ RURY</string>
    <string name="material">MATERIAŁ</string>
    <string name="button_next">DALEJ</string>
    <string name="button_back">COFNIJ</string>
    <string name="button_CBL">STWÓRZ TABELE GIĘCIA</string>
    <string name="button_settings">USTAWIENIA</string>
    <string name="button_archive_setup">PARAMETRY GIĘCIA</string>
    <string name="button_archive_label">TABELE GIĘCIA</string>
    <string name="mm">MM</string>
    <string name="degrees">*</string>
    <string name="validationToast">PROSZĘ WYPEŁNIĆ WSZYSTKIE POLA</string>
    <string name="button_calculate">PRZELICZ</string>
    <string name="back">WSTECZ</string>
    <string name="menu">MENU</string>
    <string name="aboutMe">INFORMACJE O TWÓRCY</string>
    <string name="validateBendDataToast">Proszę wypełnić wszystkie puste pola.</string>
    <string name="information">POMOC</string>
    <string name="help">Wszystkie wymiary w aplikacji podajemy w milimetrach [mm] oraz stopniach. \n\n Wymagane jest podanie parametrów od <font color="#ed1c24">x1</font> do <font color="#ed1c24">x4</font> oraz od <font color="#22b14c">a1</font> do <font color="#22b14c">a4</font>.\n\n
        Wymiary z oznaczeniem <font color="#ed1c24">"<b>x</b>"</font> z przodu to odległości pomiędzy środkiem gięcia, \n\n
        Wymiary z oznaczeniem <font color="#22b14c">""<b>a</b>"</font> oznaczają kąty jakie chcemy mieć przy poszczególnych gięciach. \n
        Jeżeli chcemy przykładowo tylko jedne gięcie wypełniamy pola x1 i a1, w pozostałych pozostawiamy zera. \n
        W wyniku dostaniemy odległości, które powinniśmy zaznaczyć na rurze przed gięciem, następnie odpowiednio z każdym gięciem przesuwać rurę o tyle żeby zaznaczona odległość kolejnego gięcia znajdowała się na linii styczności. \n
        Należy pamiętać o tym, że podajemy wymiary linii gięcia, czyli osi symetrii rury, więc trzeba uwzględnić średnicę rury.
        </string>
    <string name="aboutMeText">   Witam, nazywam się Dominik Jerzy Jurczak i jestem twórcą tej aplikacji. \n\n
        Jestem początkującym developerem więc bardzo potrzebuje feedbacku ze strony użytkowników aplikacji. \n\n
        Prosiłbym o informowanie mnie o zauważonych błędach i propozycjach usprawnień. \n
        Mój mail: dominikjjurczak@gmail.com</string>

    <string-array name="material_spinner">
        <item>CZARNA STAL</item>
        <item>ALUMINIUM</item>
        <item>STAL NIERDZEWNA</item>
    </string-array>

</resources>
