<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="75dp"
        android:onClick="openSettings"
        android:text="@string/button_settings" />

    <Button
        android:id="@+id/buttonBendSetup"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_alignStart="@+id/buttonCreateBendLabel"
        android:layout_alignTop="@+id/buttonBendLabel"
        android:onClick="openArchiveBendSetup"
        android:text="@string/button_archive_setup" />

    <Button
        android:id="@+id/buttonBendLabel"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/buttonSettings"
        android:layout_marginBottom="90dp"
        android:onClick="openArchiveBendLabel"
        android:text="@string/button_archive_label" />

    <Button
        android:id="@+id/buttonCreateBendLabel"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/buttonSettings"
        android:layout_marginStart="21dp"
        android:onClick="openCreateBendLabel"
        android:text="@string/button_CBL" />
</RelativeLayout>
